1.8.0 - "Mighty Move"
=====================

New features:

* Fix GitHub Issue #26: Multi-selection for nodes
  * Ctrl + Left click selects/deselects nodes
  * Ctrl + Left click on background clears selection

Bug fixes:

* Tests
  * Fix edge-specific undo tests
  * Fix node-specific undo tests

Other:

* Tests
  * Add redo tests

1.7.0 - "Merry Misc"
====================

New features:

* French translations
* Fix GitHub Issue #18: Setting for edge colors

Bug fixes:

* Fix GitHub Issue #47: Cannot open context menu if design is empty
* Fix GitHub Issue #46: Zoom to fit is broken on certain aspect ratios

Other:

* Disable zoom to fit if no nodes
* Disable export if no nodes

1.6.0 - "Grid Grudge"
=====================

New features:

* Fix GitHub Issue #39: Add snap to grid option
  * By selecting grid size > 0 will automatically snap nodes to grid

Other:

* Update Finnish translations

1.5.0 - "Edge Enhancement"
==========================

New features:

* Allow deletion of any node
* Fix GitHub Issue #5: Way to connect existing node to another node
  * Nodes can be connected together by dragging the (+) handle

Bug fixes:

* Remove animation glitches when node deleted during dot animations
* Fix GitHub Issue #10: Zoom level changes on undo/redo
* Fix GitHub Issue #34: Program crashes unsaved
* Clear undo stack on new design

Other:

* Tighter fit when exporting
* Adjust fit on dense layouts
* Disable animations of dummy drag edge
* Fix grammar in log messages
* Increase default edge width to 2.0
* Fix MUI_BRANDINGTEXT
* Snap: Use core18

1.4.0 - "Text Teaser"
=====================

New features:

* Fix GitHub Issue #28: Setting for font size

Bug fixes:

* Fix GitHub Issue #31: White text when using dark theme
* Fix a warning about missing Q_INTERFACES

Other:

* Fix unittest output paths

1.3.0 - "Colored Cream"
=======================

New features:

* Add transparency to node handles
* Add more contrast to the 'add' handle
* Add timeouts to node handles